<resources>
    <string name="app_name">RIS-CALI</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="continuar_como_invitado">Continuar como invitado</string>
    <string name="invitado">Invitado</string>
    <string name="registro">Registro</string>
    <string name="login">Login</string>
</resources>